[gd_scene load_steps=82 format=3 uid="uid://caqmoofobi37c"]

[ext_resource type="Script" path="res://enemies/possessed.gd" id="1_n4ngr"]
[ext_resource type="Texture2D" uid="uid://cqqbap4nxnyp2" path="res://sprites/light.png" id="2_ceemi"]
[ext_resource type="Shader" uid="uid://0dm11c6qayeu" path="res://shaders/hit.tres" id="2_vc6ox"]
[ext_resource type="Texture2D" uid="uid://bhsn6ehnsepq" path="res://sprites/NPC/dead.png" id="3_g2e6f"]
[ext_resource type="Texture2D" uid="uid://c650xkuwx3tif" path="res://sprites/enemies/b_possessed/b_possessed_die0000.png" id="4_ogsjh"]
[ext_resource type="Texture2D" uid="uid://cdip6phda2od7" path="res://sprites/enemies/b_possessed/b_possessed_die0001.png" id="5_bmn7t"]
[ext_resource type="Texture2D" uid="uid://cjbepa0nk3574" path="res://sprites/enemies/b_possessed/b_possessed_hit.png" id="5_gqcef"]
[ext_resource type="Texture2D" uid="uid://c85tpxrsidbgd" path="res://sprites/enemies/b_possessed/b_possessed_idle0000.png" id="5_xaimn"]
[ext_resource type="Texture2D" uid="uid://cemcmsx6u46sv" path="res://sprites/enemies/b_possessed/b_possessed_die0002.png" id="6_kmrly"]
[ext_resource type="Texture2D" uid="uid://b0vf4m42prmho" path="res://sprites/enemies/b_possessed/b_possessed_idle0001.png" id="6_nmc0p"]
[ext_resource type="Texture2D" uid="uid://drckcc5sqlaiu" path="res://sprites/enemies/b_possessed/b_possessed_die0003.png" id="7_3bmmg"]
[ext_resource type="Texture2D" uid="uid://bb61by153f11w" path="res://sprites/enemies/b_possessed/b_possessed_idle0002.png" id="7_b1auu"]
[ext_resource type="Texture2D" uid="uid://dy3g18hdx5ijj" path="res://sprites/enemies/b_possessed/b_possessed_die0004.png" id="8_ddndv"]
[ext_resource type="Texture2D" uid="uid://dihn557hx8naw" path="res://sprites/enemies/b_possessed/b_possessed_idle0003.png" id="8_wus2k"]
[ext_resource type="AudioStream" uid="uid://blxd3xi3kn46d" path="res://SFX/possessed_hit.wav" id="9_eeym8"]
[ext_resource type="Texture2D" uid="uid://dpb5ddvkb40mx" path="res://sprites/enemies/b_possessed/b_possessed_die0005.png" id="9_juoyi"]
[ext_resource type="Texture2D" uid="uid://uepmj0dfnfu0" path="res://sprites/enemies/b_possessed/b_possessed_idle0004.png" id="9_m37hc"]
[ext_resource type="Texture2D" uid="uid://dhnt7dkqjfaq8" path="res://sprites/enemies/b_possessed/b_possessed_idle0005.png" id="10_f2scf"]
[ext_resource type="Texture2D" uid="uid://cxth4t3eaiimx" path="res://sprites/enemies/b_possessed/b_possessed_die0006.png" id="10_vqnms"]
[ext_resource type="AudioStream" uid="uid://i6mb63m4vyaa" path="res://SFX/possessed_hit2.ogg" id="10_yemxf"]
[ext_resource type="Texture2D" uid="uid://dmyrdgmqug57s" path="res://sprites/enemies/p_possessed/p_possessed_die0000.png" id="11_nvqxf"]
[ext_resource type="Texture2D" uid="uid://qo2578joa81w" path="res://sprites/enemies/b_possessed/b_possessed_idle0006.png" id="11_ximjq"]
[ext_resource type="Texture2D" uid="uid://i1nki46hyx5t" path="res://sprites/enemies/b_possessed/b_possessed_idle0007.png" id="12_15xot"]
[ext_resource type="Texture2D" uid="uid://1v88j3jyubg" path="res://sprites/enemies/p_possessed/p_possessed_hit.png" id="12_qpt3r"]
[ext_resource type="Texture2D" uid="uid://liuga28a8n25" path="res://sprites/enemies/p_possessed/p_possessed_die0001.png" id="12_tuntr"]
[ext_resource type="Texture2D" uid="uid://ckln4kuwbghln" path="res://sprites/enemies/p_possessed/p_possessed_die0002.png" id="13_1t0t0"]
[ext_resource type="Texture2D" uid="uid://diwk8tkoewcos" path="res://sprites/enemies/b_possessed/b_possessed_idle0008.png" id="13_4kq3g"]
[ext_resource type="Texture2D" uid="uid://bir6t5nhyab2d" path="res://sprites/enemies/b_possessed/b_possessed_idle0009.png" id="14_jsf8r"]
[ext_resource type="Texture2D" uid="uid://dqwsuq3rdv2jf" path="res://sprites/enemies/p_possessed/p_possessed_die0003.png" id="14_juj42"]
[ext_resource type="Texture2D" uid="uid://cyhrea3auvflx" path="res://sprites/enemies/b_possessed/b_possessed_idle0010.png" id="15_3jpae"]
[ext_resource type="Texture2D" uid="uid://gkic23s8huuo" path="res://sprites/enemies/p_possessed/p_possessed_die0004.png" id="15_ig3n2"]
[ext_resource type="Texture2D" uid="uid://b4ohlrg3lfelt" path="res://sprites/enemies/b_possessed/b_possessed_idle0011.png" id="16_5x5p7"]
[ext_resource type="Texture2D" uid="uid://bg2dpp5o567tp" path="res://sprites/enemies/p_possessed/p_possessed_die0005.png" id="16_xiyqo"]
[ext_resource type="Texture2D" uid="uid://dn8saygqm4suv" path="res://sprites/enemies/b_possessed/b_possessed_idle0012.png" id="17_mglru"]
[ext_resource type="Texture2D" uid="uid://d8sbvbfd0cdd" path="res://sprites/enemies/p_possessed/p_possessed_die0006.png" id="17_mkahk"]
[ext_resource type="Texture2D" uid="uid://dask6wrq11bwc" path="res://sprites/enemies/b_possessed/b_possessed_idle0013.png" id="18_f7u0b"]
[ext_resource type="Texture2D" uid="uid://6s3pmx1midsy" path="res://sprites/enemies/r_possessed/r_possessed_die0000.png" id="18_s7yse"]
[ext_resource type="Texture2D" uid="uid://d07bg8escqmvt" path="res://sprites/enemies/r_possessed/r_possessed_die0001.png" id="19_ytejj"]
[ext_resource type="Texture2D" uid="uid://bt7qfpiw3ae2w" path="res://sprites/enemies/r_possessed/r_possessed_hit.png" id="20_jmskg"]
[ext_resource type="Texture2D" uid="uid://b38b420wmktcs" path="res://sprites/enemies/r_possessed/r_possessed_die0002.png" id="20_oy12b"]
[ext_resource type="Texture2D" uid="uid://c6dfw1184v6v2" path="res://sprites/enemies/r_possessed/r_possessed_die0003.png" id="21_0pmel"]
[ext_resource type="Texture2D" uid="uid://dtgtnyq0y0hfs" path="res://sprites/enemies/r_possessed/r_possessed_die0004.png" id="22_mya0j"]
[ext_resource type="Texture2D" uid="uid://bc7ibvelh610o" path="res://sprites/enemies/r_possessed/r_possessed_die0005.png" id="23_3b6ij"]
[ext_resource type="Texture2D" uid="uid://ta3xdqdkuj1c" path="res://sprites/enemies/r_possessed/r_possessed_die0006.png" id="24_reeqi"]
[ext_resource type="Texture2D" uid="uid://bsm1qg8k4q4yo" path="res://sprites/enemies/p_possessed/p_possessed_idle0000.png" id="26_e1yqo"]
[ext_resource type="Texture2D" uid="uid://tscj5g6aa5cd" path="res://sprites/enemies/p_possessed/p_possessed_idle0001.png" id="27_8kpsy"]
[ext_resource type="Texture2D" uid="uid://4ina13dp6fm6" path="res://sprites/enemies/p_possessed/p_possessed_idle0002.png" id="28_fn61p"]
[ext_resource type="Texture2D" uid="uid://5g7ebc8o8es7" path="res://sprites/enemies/p_possessed/p_possessed_idle0003.png" id="29_e1p44"]
[ext_resource type="Texture2D" uid="uid://dmqcytmsovswx" path="res://sprites/enemies/p_possessed/p_possessed_idle0004.png" id="30_aopta"]
[ext_resource type="Texture2D" uid="uid://tcvc2btiry7q" path="res://sprites/enemies/p_possessed/p_possessed_idle0005.png" id="31_m0gcs"]
[ext_resource type="Texture2D" uid="uid://4nvwyhx3ttbh" path="res://sprites/enemies/p_possessed/p_possessed_idle0006.png" id="32_cneyx"]
[ext_resource type="Texture2D" uid="uid://phymurg064sg" path="res://sprites/enemies/p_possessed/p_possessed_idle0007.png" id="33_vq5q7"]
[ext_resource type="Texture2D" uid="uid://cv5b77oddxcl2" path="res://sprites/enemies/p_possessed/p_possessed_idle0008.png" id="34_a2xo0"]
[ext_resource type="Texture2D" uid="uid://m6w4cglli44s" path="res://sprites/enemies/p_possessed/p_possessed_idle0009.png" id="35_63s0k"]
[ext_resource type="Texture2D" uid="uid://366pylew06a3" path="res://sprites/enemies/p_possessed/p_possessed_idle0010.png" id="36_n1jop"]
[ext_resource type="Texture2D" uid="uid://diyrvo1apfncx" path="res://sprites/enemies/p_possessed/p_possessed_idle0011.png" id="37_lswcn"]
[ext_resource type="Texture2D" uid="uid://bqgob3yhaitpn" path="res://sprites/enemies/p_possessed/p_possessed_idle0012.png" id="38_gmrdp"]
[ext_resource type="Texture2D" uid="uid://cwfupj1t1wsik" path="res://sprites/enemies/p_possessed/p_possessed_idle0013.png" id="39_eeoel"]
[ext_resource type="Texture2D" uid="uid://1djcv0si46br" path="res://sprites/enemies/r_possessed/r_possessed_idle0000.png" id="48_beffr"]
[ext_resource type="Texture2D" uid="uid://c3jkiob08t6cd" path="res://sprites/enemies/r_possessed/r_possessed_idle0001.png" id="49_ixt42"]
[ext_resource type="Texture2D" uid="uid://bl4qhcj28ir8b" path="res://sprites/enemies/r_possessed/r_possessed_idle0002.png" id="50_nn6hd"]
[ext_resource type="Texture2D" uid="uid://cku0wglb3d33m" path="res://sprites/enemies/r_possessed/r_possessed_idle0003.png" id="51_dofhr"]
[ext_resource type="Texture2D" uid="uid://duit3mf5kssr1" path="res://sprites/enemies/r_possessed/r_possessed_idle0004.png" id="52_t73xb"]
[ext_resource type="Texture2D" uid="uid://w8sg1roso2rx" path="res://sprites/enemies/r_possessed/r_possessed_idle0005.png" id="53_gbr4e"]
[ext_resource type="Texture2D" uid="uid://c1ako41mkiaqu" path="res://sprites/enemies/r_possessed/r_possessed_idle0006.png" id="54_nhtpo"]
[ext_resource type="Texture2D" uid="uid://di712emvpymi7" path="res://sprites/enemies/r_possessed/r_possessed_idle0007.png" id="55_dpsxo"]
[ext_resource type="Texture2D" uid="uid://b2b5w2rtoqpj5" path="res://sprites/enemies/r_possessed/r_possessed_idle0008.png" id="56_gqsg7"]
[ext_resource type="Texture2D" uid="uid://dc6r2yu7vov6x" path="res://sprites/enemies/r_possessed/r_possessed_idle0009.png" id="57_ffw2o"]
[ext_resource type="Texture2D" uid="uid://4hr4h8f2owun" path="res://sprites/enemies/r_possessed/r_possessed_idle0010.png" id="58_wudu0"]
[ext_resource type="Texture2D" uid="uid://b81f3g782s6hy" path="res://sprites/enemies/r_possessed/r_possessed_idle0011.png" id="59_sqguv"]
[ext_resource type="Texture2D" uid="uid://c2r6gfi1v4v0h" path="res://sprites/enemies/r_possessed/r_possessed_idle0012.png" id="60_6frja"]
[ext_resource type="Texture2D" uid="uid://ddb4rgaqsr" path="res://sprites/enemies/r_possessed/r_possessed_idle0013.png" id="61_0niul"]
[ext_resource type="Theme" uid="uid://dti72e04ltog4" path="res://game.theme" id="73_pmgp3"]
[ext_resource type="PackedScene" uid="uid://b05dnstrmupl3" path="res://player/hp_possessed.tscn" id="74_3ehnw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_622h7"]
resource_local_to_scene = true
shader = ExtResource("2_vc6ox")
shader_parameter/isHit = false
shader_parameter/Tint = Color(1, 1, 1, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_ibt27"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_g2e6f")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ogsjh")
}, {
"duration": 1.0,
"texture": ExtResource("5_bmn7t")
}, {
"duration": 1.0,
"texture": ExtResource("6_kmrly")
}, {
"duration": 1.0,
"texture": ExtResource("7_3bmmg")
}, {
"duration": 1.0,
"texture": ExtResource("8_ddndv")
}, {
"duration": 1.0,
"texture": ExtResource("9_juoyi")
}, {
"duration": 1.0,
"texture": ExtResource("10_vqnms")
}],
"loop": false,
"name": &"death_blue",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_nvqxf")
}, {
"duration": 1.0,
"texture": ExtResource("12_tuntr")
}, {
"duration": 1.0,
"texture": ExtResource("13_1t0t0")
}, {
"duration": 1.0,
"texture": ExtResource("14_juj42")
}, {
"duration": 1.0,
"texture": ExtResource("15_ig3n2")
}, {
"duration": 1.0,
"texture": ExtResource("16_xiyqo")
}, {
"duration": 1.0,
"texture": ExtResource("17_mkahk")
}],
"loop": false,
"name": &"death_purple",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_s7yse")
}, {
"duration": 1.0,
"texture": ExtResource("19_ytejj")
}, {
"duration": 1.0,
"texture": ExtResource("20_oy12b")
}, {
"duration": 1.0,
"texture": ExtResource("21_0pmel")
}, {
"duration": 1.0,
"texture": ExtResource("22_mya0j")
}, {
"duration": 1.0,
"texture": ExtResource("23_3b6ij")
}, {
"duration": 1.0,
"texture": ExtResource("24_reeqi")
}],
"loop": false,
"name": &"death_red",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_gqcef")
}, {
"duration": 1.0,
"texture": ExtResource("5_gqcef")
}, {
"duration": 1.0,
"texture": ExtResource("5_gqcef")
}, {
"duration": 1.0,
"texture": ExtResource("5_gqcef")
}],
"loop": true,
"name": &"hit_blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_qpt3r")
}, {
"duration": 1.0,
"texture": ExtResource("12_qpt3r")
}, {
"duration": 1.0,
"texture": ExtResource("12_qpt3r")
}, {
"duration": 1.0,
"texture": ExtResource("12_qpt3r")
}],
"loop": true,
"name": &"hit_purple",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_jmskg")
}, {
"duration": 1.0,
"texture": ExtResource("20_jmskg")
}, {
"duration": 1.0,
"texture": ExtResource("20_jmskg")
}, {
"duration": 1.0,
"texture": ExtResource("20_jmskg")
}],
"loop": true,
"name": &"hit_red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_xaimn")
}, {
"duration": 1.0,
"texture": ExtResource("6_nmc0p")
}, {
"duration": 1.0,
"texture": ExtResource("7_b1auu")
}, {
"duration": 1.0,
"texture": ExtResource("8_wus2k")
}, {
"duration": 1.0,
"texture": ExtResource("9_m37hc")
}, {
"duration": 1.0,
"texture": ExtResource("10_f2scf")
}, {
"duration": 1.0,
"texture": ExtResource("11_ximjq")
}, {
"duration": 1.0,
"texture": ExtResource("12_15xot")
}, {
"duration": 1.0,
"texture": ExtResource("13_4kq3g")
}, {
"duration": 1.0,
"texture": ExtResource("14_jsf8r")
}, {
"duration": 1.0,
"texture": ExtResource("15_3jpae")
}, {
"duration": 1.0,
"texture": ExtResource("16_5x5p7")
}, {
"duration": 1.0,
"texture": ExtResource("17_mglru")
}, {
"duration": 1.0,
"texture": ExtResource("18_f7u0b")
}],
"loop": true,
"name": &"idle_blue",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_e1yqo")
}, {
"duration": 1.0,
"texture": ExtResource("27_8kpsy")
}, {
"duration": 1.0,
"texture": ExtResource("28_fn61p")
}, {
"duration": 1.0,
"texture": ExtResource("29_e1p44")
}, {
"duration": 1.0,
"texture": ExtResource("30_aopta")
}, {
"duration": 1.0,
"texture": ExtResource("31_m0gcs")
}, {
"duration": 1.0,
"texture": ExtResource("32_cneyx")
}, {
"duration": 1.0,
"texture": ExtResource("33_vq5q7")
}, {
"duration": 1.0,
"texture": ExtResource("34_a2xo0")
}, {
"duration": 1.0,
"texture": ExtResource("35_63s0k")
}, {
"duration": 1.0,
"texture": ExtResource("36_n1jop")
}, {
"duration": 1.0,
"texture": ExtResource("37_lswcn")
}, {
"duration": 1.0,
"texture": ExtResource("38_gmrdp")
}, {
"duration": 1.0,
"texture": ExtResource("39_eeoel")
}],
"loop": true,
"name": &"idle_purple",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("48_beffr")
}, {
"duration": 1.0,
"texture": ExtResource("49_ixt42")
}, {
"duration": 1.0,
"texture": ExtResource("50_nn6hd")
}, {
"duration": 1.0,
"texture": ExtResource("51_dofhr")
}, {
"duration": 1.0,
"texture": ExtResource("52_t73xb")
}, {
"duration": 1.0,
"texture": ExtResource("53_gbr4e")
}, {
"duration": 1.0,
"texture": ExtResource("54_nhtpo")
}, {
"duration": 1.0,
"texture": ExtResource("55_dpsxo")
}, {
"duration": 1.0,
"texture": ExtResource("56_gqsg7")
}, {
"duration": 1.0,
"texture": ExtResource("57_ffw2o")
}, {
"duration": 1.0,
"texture": ExtResource("58_wudu0")
}, {
"duration": 1.0,
"texture": ExtResource("59_sqguv")
}, {
"duration": 1.0,
"texture": ExtResource("60_6frja")
}, {
"duration": 1.0,
"texture": ExtResource("61_0niul")
}],
"loop": true,
"name": &"idle_red",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"woken_up_2",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_lueaj"]
length = 0.0115
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_4443o"]
resource_name = "hit_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/isHit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 0.217638),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdvf1"]
_data = {
"RESET": SubResource("Animation_lueaj"),
"hit_flash": SubResource("Animation_4443o")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hf5l8"]
radius = 86.56

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_axo24"]
random_pitch = 1.19
streams_count = 1
stream_0/stream = ExtResource("9_eeym8")

[node name="Possesed" type="CharacterBody2D"]
scale = Vector2(0.675, 0.675)
collision_layer = 17
collision_mask = 17
script = ExtResource("1_n4ngr")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.2
texture = ExtResource("2_ceemi")
texture_scale = 0.7

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_622h7")
position = Vector2(0, 11.555)
sprite_frames = SubResource("SpriteFrames_ibt27")
animation = &"woken_up_2"

[node name="HitFlash" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
"": SubResource("AnimationLibrary_tdvf1")
}

[node name="Area2DPossessed" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DPossessed"]
shape = SubResource("CircleShape2D_hf5l8")

[node name="CollisionShape2D_disabled" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hf5l8")
disabled = true

[node name="ChangingRandomDirection" type="Timer" parent="."]
wait_time = 1.5

[node name="isHitAnimation" type="Timer" parent="."]
wait_time = 0.7

[node name="possessed_hit" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_axo24")
volume_db = -2.909
bus = &"SFX"

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_yemxf")
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 387.0
offset_top = 735.0
offset_right = 531.0
offset_bottom = 788.0
theme = ExtResource("73_pmgp3")
theme_override_font_sizes/font_size = 40
text = "Possessed"

[node name="HealthBar" parent="CanvasLayer" instance=ExtResource("74_3ehnw")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -190.0
offset_top = -70.0
offset_right = 110.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.4, 1)

[node name="timeAlive" type="Timer" parent="."]
one_shot = true

[connection signal="area_shape_entered" from="Area2DPossessed" to="." method="_on_area_2d_possessed_area_shape_entered"]
[connection signal="body_entered" from="Area2DPossessed" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ChangingRandomDirection" to="." method="_on_changing_random_direction_timeout"]
